--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "arcanedev/log-viewer": "~8.0",
+        "arcanedev/log-viewer": "^8.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "spatie/laravel-permission": "^6.7",
+        "mr-arsal4u/spatie_spice": "^1.0",
+        "php-flasher/flasher-laravel": "^1.15",
+        "spatie/laravel-permission": "^6.9",
         "stripe/stripe-php": "^14.9"
     },
     "require-dev": {
